--- a/part0/04.md
+++ b/part0/04.md
@@ -1,29 +1,13 @@
 ```mermaid
 graph TD;
-    sequenceDiagram
-    participant browser
-    participant server
+    A[User clicks "save" button] --> B[Event listener captures the click];
+    B --> C[JavaScript function is triggered and runs];
+    C --> D[HTTP request sent to server];
+    D --> E[Server response];
+    E --> F[POST https://studies.cs.helsinki.fi/exampleapp/new_note - HTML document]
+    E --> G[GET https://studies.cs.helsinki.fi/exampleapp/notes - HTML document]
+    E --> H[GET https://studies.cs.helsinki.fi/exampleapp/main.css - CSS file]
+    E --> I[GET https://studies.cs.helsinki.fi/exampleapp/main.js - JavaScript file]
+    E --> J[GET https://studies.cs.helsinki.fi/exampleapp/data.json - JSON file]
     
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
-    activate server
-    server-->>browser: HTML document
-    deactivate server
-    
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
-    activate server
-    server-->>browser: the css file
-    deactivate server
-    
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
-    activate server
-    server-->>browser: the JavaScript file
-    deactivate server
-    
-    Note right of browser: The browser starts executing the JavaScript code that fetches the JSON from the server
-    
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
-    activate server
-    server-->>browser: [{ "content": "HTML is easy", "date": "2023-1-1" }, ... ]
-    deactivate server    
-
-    Note right of browser: The browser executes the callback function that renders the notes 
+ 
