--- a/part0/04.md
+++ b/part0/04.md
@@ -1,6 +1,6 @@
 ```mermaid
 graph TD;
-    A[User clicks "save" button] --> B[Event listener captures the click];
+    A[User clicks save button] --> B[Event listener captures the click];
     B --> C[JavaScript function is triggered and runs];
     C --> D[HTTP request sent to server];
     D --> E[Server response];
