--- a/part0/04.md
+++ b/part0/04.md
@@ -1,6 +1,6 @@
 ```mermaid
 graph TD;
-    A[User clicks "save" button] --> B[Event listener captures the click];
+    A[User clicks save button] --> B[Event listener captures the click];
     B --> C[JavaScript function is triggered and runs];
     C --> D[HTTP request sent to server];
     D --> E[Server response];
@@ -9,5 +9,9 @@ graph TD;
     E --> H[GET https://studies.cs.helsinki.fi/exampleapp/main.css - CSS file]
     E --> I[GET https://studies.cs.helsinki.fi/exampleapp/main.js - JavaScript file]
     E --> J[GET https://studies.cs.helsinki.fi/exampleapp/data.json - JSON file]
-    
+    F --> K[Browser renders processed responses]
+    G --> K
+    H --> K
+    I --> K
+    J --> K
  
