--- a/part0/04.md
+++ b/part0/04.md
@@ -31,5 +31,11 @@
             activate server
             server-->>browser: [{  "content": "New_Note-Dev", "date": "Mon, 29 Apr 2024 07:35:13 GMT" }, ... ]
             deactivate server
-            Note right of browser: O navegador executa a função callback (função de retorno de chamada) que renderiza as notas
+            Note right of browser: The browser executes the callback function that renders the note
+
+
+
+
+
+
 ```
