--- a/part0/06.md
+++ b/part0/06.md
@@ -9,5 +9,5 @@
     activate server
     server-->>browser: JSON {"message":"note created"}
     deactivate server
-    Note right of browser: The server returns a new JSON indicating that the note was created - status 201
+    Note right of browser: status 201
 ```
